--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- login (only select people can signup)
+- login (only select people can signup) or some kind of admin portal
 - home page that shows all user-maintained tables
 - add tests
 - flash error messages due to validation errors (see railstutorial)
@@ -7,3 +7,5 @@
 - add color scheme for test results
 - update passwd hasing algorithm
 - remove require 'pry'; binding.pry in products model
+- add about, contact
+- add footer partial and link about and contact
